<resources>
    <string name="app_name">Total Recall</string>
    <string name="title_item_detail">Item Detail</string>
    <string-array name="spinner_list">
        <item>Article</item>
        <item>Video</item>
        <item>Website</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_string">Example Text</string>
    <string name="add">Add Resource</string>
    <string name="search">Search</string>
    <string name="tags">Tags</string>
    <string name="clear_unbound_tags">Clear unbound tags</string>
    <string name="settings">Settings</string>
    <string name="resource_list">Resource List:</string>
    <string name="add_tag_to_search">Add tag to search</string>
    <string name="insert_tag_here">Insert tag here</string>
    <string name="add_tag_to_resource">Add tag</string>
    <string name="add_resource">Add Resource</string>
    <string name="short_description">Short Description</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="link">Link</string>
    <string name="tag_to_be_added">Tag to be added</string>
    <string name="add_tag">Add Tag</string>
    <string name="edit_resource">Edit Resource</string>
    <string name="delete_resource">Delete Resource</string>
    <string name="publisher">Publisher</string>
    <string name="contributors">Contributors</string>
    <string name="name">Name</string>
    <string name="contribution">Contribution</string>
    <string name="add_contributor">Add contributor</string>
</resources>