<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/add_item_bar_action"
        android:icon="@drawable/add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search_item_bar_action"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tags_item_bar_action"
        android:icon="@drawable/tag"
        android:title="@string/tags"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/clear_unbound_tags_bar_action"
        android:title="@string/clear_unbound_tags"
        app:showAsAction="never"/>

    <item
        android:id="@+id/example_bar_action"
        android:title="Add example data"
        app:showAsAction="never" />
</menu>