<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_add_resource"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_inner_page"
        android:background="@color/white"
        android:padding="@dimen/margin_small"
        tools:context=".AddResourceFragment">

        <EditText
            android:id="@+id/titleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:textColorHint="@color/dark_grey"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/linkField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link"
            android:inputType="textNoSuggestions"
            android:textColorHint="@color/dark_grey"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/titleField" />

        <Spinner
            android:id="@+id/typeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/linkField" />

        <TableLayout
            android:id="@+id/edit_contributors_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/typeField"
            app:layout_constraintLeft_toLeftOf="parent"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:id="@+id/contributor_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contributors"
                    android:layout_column="1"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <Button
                    android:id="@+id/add_contributor_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/contributor_text"
                    app:layout_constraintBottom_toBottomOf="@id/contributor_text"
                    android:text="@string/add_contributor"
                    android:textSize="12sp"
                    />
            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_description"
            android:inputType="textMultiLine"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintTop_toBottomOf="@id/edit_contributors_table"
            />

        <Button
            android:id="@+id/commitAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_resource"
            app:layout_constraintTop_toBottomOf="@id/descriptionField"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>