<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/tag_flow_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toBottomOf="@id/add_tag_to_search_button" />


    <AutoCompleteTextView
        android:id="@+id/autocomplete_text_view_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_tag_here"
        app:layout_constraintBottom_toTopOf="@id/add_tag_to_search_button" />

    <Button
        android:id="@+id/add_tag_to_search_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/add_tag_to_search"
        app:layout_constraintBottom_toTopOf="@id/tag_flow_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline2" />

    <Button
        android:id="@+id/confirm_search"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@id/tag_flow_search"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"/>

</androidx.constraintlayout.widget.ConstraintLayout>