<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_inner_page"
    android:background="@color/white"
    android:padding="@dimen/spacing_title"
    android:paddingTop="@dimen/spacing_title"
    tools:context=".ResourceDetailFragment"
    android:baselineAligned="false">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Filler title"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/text_resource_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/link_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="Filler Link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <TableLayout
        android:id="@+id/contributors_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/link_text" >
        <TableRow>
            <TextView
                android:text="@string/contributors"/>
        </TableRow>
    </TableLayout>


    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="Filler description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contributors_table"
        app:lineHeight="@dimen/text_body_line_height" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/tag_flow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:flow_horizontalAlign="start"
        app:flow_horizontalGap="@dimen/margin_small"
        app:flow_verticalAlign="bottom"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@+id/autocomplete_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownHeight="210dp"
        android:dropDownVerticalOffset="-400dp"
        android:hint="@string/insert_tag_here"
        app:layout_constraintBottom_toTopOf="@id/add_tag_to_resource_button" />

    <Button
        android:id="@+id/add_tag_to_resource_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/add_tag_to_resource"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_small"
        android:src="@drawable/resource_icon"
        app:layout_constraintTop_toTopOf="@id/title_text"
        app:layout_constraintBottom_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>